<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_fill"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_folder_open"
        android:title="@string/open_pdf"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_compat"
        android:title="@string/compat_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log"
        android:title="@string/diagnostic_log"
        app:showAsAction="never" />
</menu>
